test/variables/constants/assignConstError.good
assignConstError.chpl:2: error: cannot assign to const variable
