test/variables/constants/assignConstError.chpl
const two = 2;
two = 3;
